<resources>
    <string name="app_name">Chat App</string>

    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="required">Required</string>
    <string name="auth_fail">Authentication Failed</string>

    <string name="new_user">New User</string>
    <string name="existing_user">Existing User</string>
    <string name="guest_user">Guest User</string>

    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_out">SIGN OUT</string>

    <string name="status_yes">Logged in</string>
    <string name="status_no">Not logged in</string>

    <string name="email_verification">Please verify your email</string>
    <string name="email_verified">Email verified</string>

    <string name="get_displayname">Set display name for current user:</string>

    <string name="search">Search</string>
    <string name="search_hint">Search</string>
    <string name="search_progress">Searching for messages</string>

    <string name="star_toast">Added New Starred Message</string>

    <string name="change_name_1">New Display Name</string>
    <string name="change_name_2">Current Email</string>
    <string name="change_name_3">Current Password</string>
    <string name="change_name_4">Confirm Password</string>

    <string name="alert_ok">OK</string>
    <string name="alert_cancel">Cancel</string>

    <string name="content_send">Send message</string>
    <string name="content_addmsg">Type new message</string>

    <string name="settings_1">General Settings</string>
    <string name="settings_2">Chat Settings</string>
    <string name="settings_3">User Settings</string>
    <string name="settings_theme_1">Theme</string>
    <string name="settings_theme_2">Switch between light and dark theme</string>
    <string name="settings_time_1">Show AM/PM</string>
    <string name="settings_time_2a">Currently showing 24 hour format</string>
    <string name="settings_time_2b">Currently showing 12 hour format</string>
    <string name="settings_change_name">Change Display Name</string>
    <string name="settings_signout">Sign out</string>

    <string name="intro1">Chat</string>
    <string name="intro1_desc">A simple chat application</string>
    <string name="intro2">Private and Group Chats</string>
    <string name="intro2_desc">Start a new chat by clicking FAB</string>
    <string name="intro3">Important Messages</string>
    <string name="intro3_desc">Star an important message by simply clicking on it</string>
    <string name="credits1">App Icon Credits: Moonshine Icon Pack</string>
    <string name="credits2">Icon Credits: Material Icon Pack</string>

    <string name="no_internet">No Internet Connection</string>

    <string name="progress_bar">CREATING USER PROFILE</string>
    <string name="title_activity_main2">MainActivity2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main_chat">MainChatActivity</string>

    <string name="alert_new_chat_title">New Chat</string>
    <string name="alert_new_chat_message">Start private chat with </string>
    <string name="alert_new_group_message">New Group Chat</string>

    <string name="group_chat">Start Group Chat</string>
    <string name="private_chat">Start Private Chat</string>

    <string name="change_name_msg">Type New Username: </string>
    <string name="change_name_title">Change Existing Username</string>

    <string name="message_group_chat">New room name:</string>

    <string name="placeholher_message">Message</string>
    <string name="placeholder_user">User</string>

    <string name="nav_chats">Chats</string>
    <string name="nav_friends">Friends</string>
    <string name="nav_starred">Starred Messages</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_about">About</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>
