<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_chats" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_friends" />
    </group>

    <item android:title="More">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_setting" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
