<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/settings_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView
        android:layout_marginBottom="1sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/settings_theme_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/switch_theme" />
            <TextView
                android:text="@string/settings_theme_2"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <TextView
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/settings_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.CardView
        android:layout_marginBottom="1sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/settings_time_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/switch_time" />
            <TextView
                android:text="@string/settings_time_2a"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/settings_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView
        android:layout_marginBottom="1sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatButton
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/settings_change_name"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:id="@+id/btn_change_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginBottom="1sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatButton
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/settings_signout"
            android:textAlignment="viewStart"
            android:id="@+id/btn_signout"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.CardView>

</LinearLayout>